--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -274,7 +274,7 @@
         Discover Your Home's Worth
       </a>
       <a class="btn-outline" href="{{ url_for('homeowner_overview') }}">
-        Explore Dashboard
+        Explore Homeowners Dashboard
       </a>
     </div>
 
