--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,9 @@
           <ul>
             <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="{{ url_for('homeowner_overview') }}">Dashboard</a></li>
-            <li><a href="{{ url_for('login') }}">Sign In</a></li>
-            <li><a href="{{ url_for('signup', role='homeowner') }}">Get Started</a></li>
+            {% if session.get('user_id') %}
+              <li><a href="{{ url_for('logout') }}">Sign Out</a></li>
+            {% endif %}
           </ul>
         </nav>
       </div>
